Fixed visible scrollbar when items use negative margins (reveal on hover)

--- a/view/frontend/web/css/source/components/_carousel.less
+++ b/view/frontend/web/css/source/components/_carousel.less
@@ -15,12 +15,17 @@
                 padding-left: 15px;
                 padding-right: 15px;
 
+                // space for items with small negative margins
+                margin-top: -15px;
+                padding-top: 15px;
+                margin-bottom: -15px;
+                padding-bottom: 15px;
+
                 display: flex;
                 flex-wrap: nowrap;
                 overflow-x: auto;
                 scroll-behavior: smooth;
                 scroll-snap-type: none;
-                margin-bottom: 0;
 
                 // hide scrollbar
                 -ms-overflow-style: none;
